Replace deprecated functions for java 21
- URL string structors
- thread.getId